# vector-rag-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
obsidian_rag_tool/: __init__.py  cli.py  completion.py  utils.py
plugins/obsidian-rag-tool/.claude-plugin/: plugin.json
plugins/obsidian-rag-tool/commands/: help.md
plugins/obsidian-rag-tool/skills/obsidian-rag-tool/: SKILL.md
references/: marketplace-plugin-guide.md
tests/: __init__.py  test_models.py  test_utils.py
vector_rag_tool/commands/: query.py
vector_rag_tool/core/: models.py
